# wasi-messaging-demo

./: Cargo.toml  Makefile  README.md  guest.component.wasm
docs/: stakeholder-review.md
docs/stakeholder-review-code-examples/e0-single-consumer-checkpointing/: Cargo.toml
docs/stakeholder-review-code-examples/e0-single-consumer-checkpointing/src/: main.rs
guest/: Cargo.toml
guest/src/: lib.rs
host/: Cargo.toml  output.rs
host/src/: main.rs
wit/: messaging.wit
